# strikeout

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  link.rs  main.rs  scan.rs  transfer.rs
