[package]
name = "strikeout"
version = "0.1.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.11"
serde_json = "1.0.59"
simplelog = "0.8.0"
thiserror = "1.0.22"
walkdir = "2.3.1"
